[package]
name = "exprt"
version = "0.1.0"
edition = "2021"
description = "Embeddable expression language"
authors = ["sahandevs <sahandevs@gmail.com>"]
repository = "https://github.com/sahandevs/exprt"
license = "MIT"
categories = ["parser-implementations"]
readme = "README.md"
keywords = ["scripting", "scripting-engine", "scripting-language", "embeddable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
